--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     </head>
     <body>
         <div id="editor">
-            <div id="load-div">
-                <form id="load-form" action="">
-                    <input
-                        id="new" value="New" type="button"><input
-                        id="load" value="Load" type="button">
-                    <input id="inport" value="Inport" type="button" disabled>
-                </form>
-            </div>
             <div id="save-div">
                 <form id="save-form" action="">
                     <input
                         id="name" value="" autocomplete="on" type="text"><input
                         id="save" value="Save" type="submit">
-                    <input
-                        id="export-glb" value="Export GLB" type="button" disabled><input
-                        id="export-vrm" value="Export VRM" type="button" disabled>
+                    <input id="load" value="Load" type="button">
+                    <input id="new" value="New" type="button">
+                </form>
+            </div>
+            <div id="export-div">
+                <form id="export-form" action="">
+                    <input id="inport" value="Inport" type="button" disabled>
+                    <input id="export-glb" value="Export GLB" type="button" disabled>
+                    <input id="export-vrm" value="Export VRM" type="button" disabled>
                 </form>
             </div>
             <div id="mode-3d">
