--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width,user-scalable=no">
         <title>Primi</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
@@ -112,9 +112,9 @@
             </div>
         </div>
 
-        <script src="./draw/matrix.js" type="module" defer></script>
-        <script src="./draw/model.js" type="module" defer></script>
-        <script src="./draw/renderer.js" type="module" defer></script>
+        <script src="./drawer/matrix.js" type="module" defer></script>
+        <script src="./drawer/model.js" type="module" defer></script>
+        <script src="./drawer/renderer.js" type="module" defer></script>
         <script src="./main.js" type="module" defer></script>
     </body>
 </html>
