--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                     id="ruler-2d-mode" class="radio-button">Param</span>
             </div>
 
-            <!--div id="time-bar">
-                <div id="time" style="top:calc(100% - 2em);">0</div>
-            </div-->
             <canvas id="canvas"></canvas>
             <div id="depth-bar">
                 <div id="depth" style="top:25%;">Depth</div>
@@ -100,7 +97,7 @@
                 </form>
             </div>
 
-            <div id="vertex-div" class="none">
+            <div id="vertex-div">
                 <div id="vertice-list"></div>
                 <span id="new-vertex" class="button">New Vertex</span>
             </div>
