--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,user-scalable=no">
+        <meta
+            name="viewport"
+            content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <title>Primi</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
+        <link href="./manifest.json" rel="manifest">
     </head>
     <body>
         <div id="editor">
