--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
         <link href="./manifest.json" rel="manifest">
+        <link href="./apple-touch-icon.png" rel="apple-touch-icon">
     </head>
     <body>
         <div id="editor">
