--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
                 </form>
             </div>
             <div id="load-div">
+                <input id="export" value="Exp" type="button" disabled>
+                <input id="import" value="Imp" type="button" disabled>
                 <input id="load" value="Load" type="button">
                 <input id="new" value="New" type="button">
-                <input id="import" value="Imp" type="button" disabled>
-                <input id="export" value="Exp" type="button" disabled>
             </div>
             <div id="mode-3d">
-                3D
-                <span
-                    id="vertex-3d-mode" class="radio-button selected">Vert</span><span
+                <span class="label">3D</span><span
+                    id="vertex-3d-mode" class="radio-button selected">Vertex</span><span
                     id="space-mode" class="radio-button">Space</span><span
                     id="ruler-3d-mode" class="radio-button">Param</span>
             </div>
             <div id="mode-2d">
-                2D
-                <span
-                    id="vertex-2d-mode" class="radio-button">Vert</span><span
+                <span class="label">2D</span><span
+                    id="vertex-2d-mode" class="radio-button">Vertex</span><span
                     id="texel-mode" class="radio-button">Texel</span><span
                     id="ruler-2d-mode" class="radio-button">Param</span>
             </div>
