--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta
             name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+            content="width=device-width,user-scalable=no">
         <title>Primi</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
