--- a/offline-nocache.html
+++ b/offline-nocache.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta
             name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-        <title>Offline & No Cache - Primi</title>
+            content="width=device-width,user-scalable=no">
+        <title>Offline & No Cache - Primitive 3D</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
         <link href="./manifest.json" rel="manifest">
@@ -14,8 +14,9 @@
     <body>
         <h1>Offline & No Cache</h1>
         <p>
-            オフラインでかつキャッシュがありません。
-            オンライン状態で読み込んでください。
+            現在オフラインで、
+            かつ残っているキャッシュのページがありません。
+            オンライン状態で読み込んでくだされば、
             次回からはオフラインでも利用できます。
         </p>
         <script defer>
