--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta
             name="viewport"
             content="width=device-width,user-scalable=no">
-        <title>Primi</title>
+        <title>Primitive Modeler</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
         <link href="./manifest.json" rel="manifest">
