--- a/index.html
+++ b/index.html
@@ -105,18 +105,25 @@
                 </form>
             </div>
             <div id="vertex-div" class="none">
-                <div id="vertice-list"></div>
+                <dt>Vertex Color</dt>
+                <dd>
+                    <input value="#FFFFFF" id="vertex-color" type="color">
+                </dd>
+                <dt>Vertex List</dt>
+                <dd>
+                    <ul id="vertice-list"></ul>
+                </dd>
             </div>
             <div id="matrix-div" class="none">
-                <div id="matrix-list"></div>
+                <ul id="matrix-list"></ul>
             </div>
             <div id="surface-div" class="none">
             </div>
             <div id="texel-div" class="none">
                 <dl>
-                    <dt>Color</dt>
+                    <dt>Texel Color</dt>
                     <dd>
-                        <input value="#000000" id="texel-color" type="color" />
+                        <input value="#000000" id="texel-color" type="color">
                     </dd>
                 </dl>
             </div>
