ファイルインポート

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                         id="cancel-file" value="Cancel" type="button"><input
                         id="import" value="Import" type="button"><input
                         id="export" value="Export .space File" type="submit">
+                    <input id="import-file" class="none" type="file">
                 </form>
             </div>
         </div>
