バグ修正がきりがない

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div id="editor">
 
-            <div id="version">N</div>
+            <div id="version"></div>
 
             <div id="name-div">
                 <input id="name" value="" autocomplete="on" type="text">
@@ -125,8 +125,8 @@
                 <dl>
                     <dt>Texel Color</dt>
                     <dd>
-                        <label id="button-texel-color" for="texel-color" style="background-color:#000000; color:#FFF;">#000000</label>
-                        <input value="#000000" style="background-color:#000000; color:#FFF;" id="texel-color" class="none" type="color">
+                        <label id="button-texel-color" for="texel-color" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label>
+                        <input value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="texel-color" class="none" type="color">
                     </dd>
                 </dl>
             </div>
